#1 Added carousel to front page, made call to get all items

--- a/my-app/src/components/Navigation.css
+++ b/my-app/src/components/Navigation.css
@@ -1,7 +1,7 @@
 .navbar-nav {
   display: grid;
   grid-auto-flow: column;
-  grid-gap: 10px; /* Adjust as needed */
+  grid-gap: 10px;
 }
 .navbar {
   background-color: orange;
